--- a/configs/lab_fore.yaml
+++ b/configs/lab_fore.yaml
@@ -6,12 +6,12 @@ DATA:
   VAL:
     ROOT_DIR: "data/dtu"
   TEST:
-    ROOT_DIR: "/data/FastMVSNet/SampleSet/MVS_Data"
-    NUM_VIEW: 5
-    IMG_HEIGHT: 960
-    IMG_WIDTH: 1280
-    NUM_VIRTUAL_PLANE: 96
-    INTER_SCALE: 2.13
+    ROOT_DIR: "/data/FastMVSNet/lab"
+    NUM_VIEW: 3
+    IMG_HEIGHT: 912
+    IMG_WIDTH: 1600
+    NUM_VIRTUAL_PLANE: 32
+    INTER_SCALE: 0.13
   NUM_WORKERS: 16
 MODEL:
   EDGE_CHANNELS: (32, 32, 64)
@@ -19,8 +19,8 @@ MODEL:
     IMG_SCALES: (0.25, 0.5)
     INTER_SCALES: (0.75, 0.375)
   TEST:
-    IMG_SCALES: (0.25, 0.5, 1.0)
-    INTER_SCALES: (0.75, 0.15, 0.15)
+    IMG_SCALES: (0.25, 0.5, 1.0, 1.0, 1.0)
+    INTER_SCALES: (0.75, 0.15, 0.15, 0.15, 0.15)
 SCHEDULER:
   TYPE: "StepLR"
   INIT_EPOCH: 4
