--- a/configs/lab.yaml
+++ b/configs/lab.yaml
@@ -6,12 +6,12 @@ DATA:
   VAL:
     ROOT_DIR: "data/dtu"
   TEST:
-    ROOT_DIR: "/data/FastMVSNet/SampleSet/MVS_Data"
-    NUM_VIEW: 5
-    IMG_HEIGHT: 960
-    IMG_WIDTH: 1280
-    NUM_VIRTUAL_PLANE: 96
-    INTER_SCALE: 2.13
+    ROOT_DIR: "/data/FastMVSNet/lab"
+    NUM_VIEW: 3
+    IMG_HEIGHT: 912
+    IMG_WIDTH: 1600
+    NUM_VIRTUAL_PLANE: 32
+    INTER_SCALE: 6.45
   NUM_WORKERS: 16
 MODEL:
   EDGE_CHANNELS: (32, 32, 64)
